--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,1 +1,9 @@
-FROM baseImage
+FROM alpine:3.14
+WORKDIR /todo-app/front-end
+COPY package.json, package-lock.json, ./
+COPY src ./src
+COPY public ./public
+RUN npm install
+EXPOSE 3000
+ENTRYPOINT ["npm"]
+CMD ["start"]
